welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:5: error: ';' expected but ',' found.
  if(estSurBiscuit() && porteBiscuit()){recule(); poseBiscuit();retourne(),avance()}
                                                                          ^